# quotexpy

./: .env (example)  .gitignore  .pylintrc  .travis.yml  AUTHORS  CHANGELOG.md  Makefile  README.md  __init__.py  driver.sh  logger.py  main.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  server.py  setup.cfg  setup.py  singleton_decorator.py
.codesandbox/: tasks.json
.github/: FUNDING.yml  stale.yml
.github/workflows/: black.yml  chore.yml  pylint.yml  pypi-publish.yml  release.yml
api/: __init__.py  api.py  expiration.py  stable_api.py
api/http/: login.py  logout.py  navigator.py  qxbroker.py  retry.py
api/ws/: client.py
api/ws/channels/: buy.py  candles.py  sell_option.py  ssid.py
api/ws/objects/: candles.py  listinfodata.py  timesync.py
docs/: conf.py  index.rst  package-lock.json  package.json  tutorial.rst
example/: main.py  my_connection.py  singleton_decorator.py
quotexpy/: __init__.py  api.py  constants.py  expiration.py  global_value.py  logger.py  new.py  stable_api.py  utils.py
quotexpy/exceptions/: __init__.py
quotexpy/http/: login.py  logout.py  navigator.py  qxbroker.py  refresh.py  resource.py  retry.py  user_agents.py
quotexpy/utils/: __init__.py  account_type.py  candles_period.py  duration_time.py  operation_type.py  playwright_install.py
quotexpy/ws/: client.py
quotexpy/ws/channels/: base.py  buy.py  candles.py  sell_option.py  ssid.py  trade.py
quotexpy/ws/objects/: candles.py  listinfodata.py  profile.py  timesync.py
stable/: api.py  new.py
stable/http/: login.py  logout.py  navigator.py  qxbroker.py  resource.py
stable/ws/: client.py
stable/ws/channels/: buy.py  candles.py  sell_option.py  ssid.py
stable/ws/objects/: candles.py  listinfodata.py  profile.py  timesync.py
tests/: retry.py
