[tool.poetry]
name = "quotexpy"
version = "1.0.36"
description = "📈 QuotexPy is a library for interact with qxbroker easily."
authors = ["Santiago Ramirez <santiirepair@gmail.com>"]
repository = "https://github.com/SantiiRepair/quotexpy"
readme = ["README.md"]
keywords = ["quotex", "quotexpy"]
license = "BSL"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
appdirs = "^1.4.4"
beautifulsoup4 = "^4.11.2"
certifi = "^2022.12.7"
charset-normalizer = "^3.2.0"
cloudscraper = "^1.2.71"
greenlet = "^2.0.2"
idna = "^3.4"
importlib-metadata = "^6.2.0"
playwright = "^1.37.0"
pyee = "^9.0.4"
pyparsing = "^3.1.1"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
shutup = "^0.2.0"
simplejson = "^3.18.3"
soupsieve = "^2.4"
termcolor = "^2.3.0"
tqdm = "^4.65.0"
typing_extensions = "^4.5.0"
urllib3 = "^2.0.5"
websocket-client = "^1.6.3"
websockets = "^11.0.3"
zipp = "^3.17.0"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
poetry = "^1.6.1"
poetry-core = "^1.7.0"
poetry2setup = "^1.1.0"
pylint = "^2.17.5"
pytest = "^7.4.2"

[tool.black]
line-length = 120
target-version = ['py39']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core"]
python_requires = ">=3.10"
build-backend = "poetry.core.masonry.api"
