[tool.poetry]
name = "quotexpy"
version = "1.40.2"
description = "📈 QuotexPy is a library for interact with qxbroker easily."
authors = ["Santiago Ramirez <santiirepair@gmail.com>"]
repository = "https://github.com/SantiiRepair/quotexpy"
readme = ["README.md"]
keywords = ["quotex", "quotexpy"]
license = "LGPL-2.1"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
appdirs = "1.4.4"
beautifulsoup4 = "4.11.2"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "3.2.0"
cloudscraper = "1.2.71"
cryptography = "40.0.1"
greenlet = ">=2.0.1"
h11 = "0.14.0"
httpcore = "0.17.0"
httpx = "0.24.0"
idna = "3.4"
importlib-metadata = ">=6.6.0"
playwright = "1.39.0"
pycparser = ">=2.21"
pyOpenSSL = "23.1.1"
pyparsing = "3.1.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
shutup = "0.2.0"
simplejson = "3.18.3"
sniffio = "1.3.0"
soupsieve = "2.4"
tqdm = "4.65.0"
typing_extensions = "4.5.0"
urllib3 = ">=2.0.5"
websocket-client = "1.6.3"
websockets = "11.0.3"
zipp = "3.17.0"
yfinance = "0.2.31"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
poetry = "^1.6.1"
poetry-core = "^1.7.0"
poetry2setup = "^1.1.0"
pylint = "^2.17.5"
pytest = "^7.4.2"
schedule = ">=1.2.1"
termcolor = "^2.3.0"

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core"]
python_requires = ">=3.10"
build-backend = "poetry.core.masonry.api"
